# securememory

./: .pre-commit-config.yaml  CMakeLists.txt  readme.md
include/securememory/: allocator.h
include/securememory/win32/: exception.h  heap.h  page_table.h
test/: pch.h  securememory.cpp  testmodule.cpp
